--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,7 +8,8 @@ spring:
 
   data:
     mongodb:
-      uri: mongodb://admin:homeprotector2025!@10.0.51.19:27017/homeprotector
+      uri: mongodb://admin:homeprotector2025!@localhost:27017/homeprotector?authSource=admin
+
 
   security:
     oauth2:
